--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "check": "astro check"
   },
   "dependencies": {
-    "astro": "^4.16.0"
+    "astro": "^4.16.18"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.0",
     "@astrojs/rss": "^4.0.0",
+    "@astrojs/tailwind": "^6.0.0",
+    "tailwindcss": "^3.4.19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "typescript": "^5.6.0"
   }
 }
