--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check": "astro check"
   },
   "dependencies": {
-    "astro": "^4.16.18"
+    "astro": "^4.16.18",
+    "flowbite": "^3.1.2"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.0",
